test/expected/explain_etv-c++.out
c++decl> explain extern void v
                 ^
9: error: variable of "void"; did you mean "void*"?
